--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -16,7 +16,7 @@
     <%= form.file_field :image, id:"file-input" %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit 'Post Selfie', class: "btn btn-primary btn-lg" %>
   </div>
 <% end %>
