--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,7 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1><font color= "#73757a">Friends Photos</font></h1>
 
+
+<h1><font color= "#73757a">Photos</font></h1>
+
+
+ 
 <% @photos.each do |photo| %>
 <center>
 <div 
